# Sumbaev_course_project_SQL

./: .gitignore  DBManager.py  README.md  main.py  pyproject.toml  queries.sql  utils.py
